# fastapi-user-management

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  settings.yaml
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: lint-ci.yml  test-ci.yml
fastapi_user_management/: app.py
fastapi_user_management/alembic/versions/: a3afeda948e8_initial_migration.py
fastapi_user_management/config/: _config.py
fastapi_user_management/core/: database.py  init_db.py
fastapi_user_management/crud/: crud_base.py  crud_role.py  crud_users.py
fastapi_user_management/errors/: exceptions.py
fastapi_user_management/models/: base.py  role.py  user.py
fastapi_user_management/routes/: admin.py  auth.py
fastapi_user_management/schemas/: auth.py  role.py  user.py
fastapi_user_management/tools/: encryption.py  token.py
requirements/: requirements-dev.in  requirements-dev.txt  requirements-docs.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
scripts/: lint.sh
tests/: conftest.py  test_app.py
tests/core/: test_database.py  test_init_db.py
tests/crud/: test_crud_user.py
tests/errors/: test_exception.py
tests/models/: test_role.py  test_user.py
tests/routes/: test_admin.py  test_auth.py
tests/schemas/: test_role_schema.py  test_user_schema.py
tests/tools/: test_encryption.py  test_token.py
